@@ -357,18 +357,6 @@ span.span_sector sector span.sec_value		{color:#000; font-size:14px; text-align:
 span.span_sector sector span.sec_bar::before{content:""; background-color:rgba(0,0,0,0.1); width:475px; height:24px; z-index:-1; position:absolute; left:0; top:0;}
 span.span_sector sector span.sec_bar		{background-color:#000; width:100%; max-width:475px; height:24px; position:relative;}
 
-span.span_sector sector[vocabulary="3"],
-span.span_sector sector[vocabulary="4"],
-span.span_sector sector[vocabulary="5"],
-span.span_sector sector[vocabulary="6"],
-span.span_sector sector[vocabulary="7"],
-span.span_sector sector[vocabulary="8"],
-span.span_sector sector[vocabulary="9"],
-span.span_sector sector[vocabulary="10"],
-span.span_sector sector[vocabulary="11"],
-span.span_sector sector[vocabulary="99"],
-span.span_sector sector[vocabulary="98"]	{display:block; padding:0 40px;}
-
 span.span_sector sector[vocabulary="3"] span.sec_code:before	{content:"Classification of the Functions of Government (UN)"; font-size:14px; color:#000;}
 span.span_sector sector[vocabulary="4"] span.sec_code:before	{content:"Statistical classification of economic activities in the European Community"; font-size:14px; color:#000;}
 span.span_sector sector[vocabulary="5"] span.sec_code:before	{content:"National Taxonomy for Exempt Entities (USA)"; font-size:14px; color:#000;}
@@ -393,29 +381,13 @@ span.span_sector sector[vocabulary="11"] span.sec_code,
 span.span_sector sector[vocabulary="99"] span.sec_code,
 span.span_sector sector[vocabulary="98"] span.sec_code	{font-size:0;}
 
-span.span_sector sector[vocabulary="3"] span.sec_code:after,
-span.span_sector sector[vocabulary="4"] span.sec_code:after,
-span.span_sector sector[vocabulary="5"] span.sec_code:after,
-span.span_sector sector[vocabulary="6"] span.sec_code:after,
-span.span_sector sector[vocabulary="7"] span.sec_code:after,
-span.span_sector sector[vocabulary="8"] span.sec_code:after,
-span.span_sector sector[vocabulary="9"] span.sec_code:after,
-span.span_sector sector[vocabulary="10"] span.sec_code:after,
-span.span_sector sector[vocabulary="11"] span.sec_code:after,
-span.span_sector sector[vocabulary="99"] span.sec_code:after,
-span.span_sector sector[vocabulary="98"] span.sec_code:after	{content:attr(code) ' Non-DAC'; margin-left:10px; border:1px solid #000; padding:2px 5px; border-radius:4px; font-size:11px; color:#000; white-space:nowrap;}
-
-span.span_sector sector[vocabulary="3"] span.sec_bar,
-span.span_sector sector[vocabulary="4"] span.sec_bar,
-span.span_sector sector[vocabulary="5"] span.sec_bar,
-span.span_sector sector[vocabulary="6"] span.sec_bar,
-span.span_sector sector[vocabulary="7"] span.sec_bar,
-span.span_sector sector[vocabulary="8"] span.sec_bar,
-span.span_sector sector[vocabulary="9"] span.sec_bar,
-span.span_sector sector[vocabulary="10"] span.sec_bar,
-span.span_sector sector[vocabulary="11"] span.sec_bar,
-span.span_sector sector[vocabulary="99"] span.sec_bar,
-span.span_sector sector[vocabulary="98"] span.sec_bar	{background-color:#000;}
+span.span_sector .non_dac_sectors:before	{content:"NON-DAC"; font-size:14px; color:#000; display:block; padding-bottom:10px; margin-bottom:20px; border-bottom:1px solid #000;}
+span.span_sector .non_dac_sectors			{display:block; padding:40px 40px 0 40px; background-color:#FFF;}
+span.span_sector .non_dac_sectors sector	{display:block; z-index:1; padding:0;}
+span.span_sector .non_dac_sectors sector span.sec_value			{display: inline; vertical-align:top; margin-left:10px; text-align:initial; max-width:initial;}
+span.span_sector .non_dac_sectors sector span.sec_bar			{display:none;}
+span.span_sector .non_dac_sectors sector span.sec_code			{width:initial; border:0; padding:0;}
+span.span_sector .non_dac_sectors sector span.sec_code:after	{content:'Vocab ' attr(vocab) ' Code ' attr(code); margin-left:10px; border:1px solid #000; padding:2px 5px; border-radius:4px; font-size:11px; color:#000; white-space:nowrap;}
 
 /*	Show only when DAC sectors are displayed	*/
 span.span_sector span.length::after {content:" DAC";}
