@@ -6,6 +6,7 @@ Import sector_vocab in iati_codes.js
 Fix close span for non-DAC sector section
 Update length of sectors with DAC
 Fix padding css for non-DAC sector wrapper
+Update non-DAC section display
 
 
 Development Portal (2019-01-18 shi)
